{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 69,
  "lineage": "9093a060-1f35-834b-f51e-aaf69d1a240d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5ff4a5369846c13",
            "arn": "arn:aws:ec2:us-east-1:756090161177:elastic-ip/eipalloc-0d5ff4a5369846c13",
            "association_id": "eipassoc-09358c6551b0e99cf",
            "domain": "vpc",
            "id": "eipalloc-0d5ff4a5369846c13",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ebe417ef520c777b",
            "private_dns": "ip-10-0-0-52.ec2.internal",
            "private_ip": "10.0.0.52",
            "public_dns": "ec2-32-196-162-35.compute-1.amazonaws.com",
            "public_ip": "32.196.162.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "food-delivery-nat-eip"
            },
            "tags_all": {
              "Name": "food-delivery-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7f022123f8ff19d",
            "arn": "arn:aws:ec2:us-east-1:756090161177:instance/i-058b8bfcbfb269f25",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058b8bfcbfb269f25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e716ab8d801a51e2",
            "private_dns": "ip-10-0-0-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.143",
            "public_dns": "ec2-44-192-129-19.compute-1.amazonaws.com",
            "public_ip": "44.192.129.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da8aeffbd0949017",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0684e087704f30498",
            "tags": {
              "Name": "food-delivery-bastion"
            },
            "tags_all": {
              "Name": "food-delivery-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a692f1468c08285"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7f022123f8ff19d",
            "arn": "arn:aws:ec2:us-east-1:756090161177:instance/i-0f17e1ef229e4f750",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f17e1ef229e4f750",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "kind",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057734c2f7b61db9b",
            "private_dns": "ip-10-0-132-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.132.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b53e3c8459a3f6cb",
                "volume_size": 22,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f481288e4de06bb9",
            "tags": {
              "Name": "food-delivery-private-server"
            },
            "tags_all": {
              "Name": "food-delivery-private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09082dc15cd0f863f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.private_server",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:internet-gateway/igw-0ab9106423791d781",
            "id": "igw-0ab9106423791d781",
            "owner_id": "756090161177",
            "tags": {
              "Name": "food-delivery-igw"
            },
            "tags_all": {
              "Name": "food-delivery-igw"
            },
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5ff4a5369846c13",
            "association_id": "eipassoc-09358c6551b0e99cf",
            "connectivity_type": "public",
            "id": "nat-09adcf3b466aaaff4",
            "network_interface_id": "eni-0ebe417ef520c777b",
            "private_ip": "10.0.0.52",
            "public_ip": "32.196.162.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0684e087704f30498",
            "tags": {
              "Name": "food-delivery-nat-gw"
            },
            "tags_all": {
              "Name": "food-delivery-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:route-table/rtb-0a2cda7cde223c963",
            "id": "rtb-0a2cda7cde223c963",
            "owner_id": "756090161177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09adcf3b466aaaff4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "food-delivery-private-rt"
            },
            "tags_all": {
              "Name": "food-delivery-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:route-table/rtb-0d694219532f8122c",
            "id": "rtb-0d694219532f8122c",
            "owner_id": "756090161177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab9106423791d781",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "food-delivery-public-rt"
            },
            "tags_all": {
              "Name": "food-delivery-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3c0d6d0c134827",
            "route_table_id": "rtb-0a2cda7cde223c963",
            "subnet_id": "subnet-0f481288e4de06bb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f56c363654f06b11",
            "route_table_id": "rtb-0d694219532f8122c",
            "subnet_id": "subnet-0684e087704f30498"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0460bb08d4a7c1ba5",
            "route_table_id": "rtb-0d694219532f8122c",
            "subnet_id": "subnet-059d49acc52e36433"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:security-group/sg-06a692f1468c08285",
            "description": "Allow SSH from admin IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a692f1468c08285",
            "ingress": [
              {
                "cidr_blocks": [
                  "209.150.151.182/32"
                ],
                "description": "SSH from admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "food-delivery-bastion-sg",
            "name_prefix": "",
            "owner_id": "756090161177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "food-delivery-bastion-sg"
            },
            "tags_all": {
              "Name": "food-delivery-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:security-group/sg-09082dc15cd0f863f",
            "description": "Allow SSH from bastion, blue/green app ports open for later ALB integration",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09082dc15cd0f863f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Blue frontend NodePort (temporary open within VPC, ALB rule replaces this later)",
                "from_port": 30007,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30007
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Green frontend NodePort (temporary open within VPC, ALB rule replaces this later)",
                "from_port": 30008,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30008
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a692f1468c08285"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "food-delivery-private-sg",
            "name_prefix": "",
            "owner_id": "756090161177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "food-delivery-private-sg"
            },
            "tags_all": {
              "Name": "food-delivery-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:subnet/subnet-0f481288e4de06bb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.132.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f481288e4de06bb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756090161177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "food-delivery-private-subnet",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "food-delivery-private-subnet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:subnet/subnet-0684e087704f30498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0684e087704f30498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756090161177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "food-delivery-public-us-east-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "food-delivery-public-us-east-1a",
              "Tier": "public"
            },
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:subnet/subnet-059d49acc52e36433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059d49acc52e36433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756090161177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "food-delivery-public-us-east-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "food-delivery-public-us-east-1b",
              "Tier": "public"
            },
            "vpc_id": "vpc-0e8b774e594ebaacc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756090161177:vpc/vpc-0e8b774e594ebaacc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1aaaf8034f4aa4d",
            "default_route_table_id": "rtb-0293cce328328e991",
            "default_security_group_id": "sg-0964e2ddd635fc437",
            "dhcp_options_id": "dopt-059db1a85f4bfa8fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8b774e594ebaacc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0293cce328328e991",
            "owner_id": "756090161177",
            "tags": {
              "Name": "food-delivery-vpc"
            },
            "tags_all": {
              "Name": "food-delivery-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}